--- a/.github/workflows/mainline.yml
+++ b/.github/workflows/mainline.yml
@@ -43,7 +43,7 @@ jobs:
             platforms: linux/386,linux/amd64,linux/arm/v5,linux/arm/v7,linux/arm64/v8,linux/mips64le,linux/ppc64le,linux/s390x
             push: true
             build-args: |
-                NGINX_FROM_IMAGE=1.25.2
+                NGINX_FROM_IMAGE=nginx:1.25.2
                 ENABLED_MODULES="brotli headers-more modsecurity geoip2 subs-filter"
             tags: |
                 snowdreamtech/nginx:1.25.2
