--- a/.github/workflows/mainline.yml
+++ b/.github/workflows/mainline.yml
@@ -44,7 +44,7 @@ jobs:
             push: true
             build-args: |
                 NGINX_FROM_IMAGE=nginx:1.25.2
-                ENABLED_MODULES="brotli headers-more modsecurity geoip2 subs-filter"
+                ENABLED_MODULES=brotli headers-more modsecurity geoip2 subs-filter
             tags: |
                 snowdreamtech/nginx:1.25.2
                 snowdreamtech/nginx:mainline
