--- a/.github/workflows/mainline.yml
+++ b/.github/workflows/mainline.yml
@@ -40,7 +40,7 @@ jobs:
           uses: docker/build-push-action@v3
           with:
             context: .
-            file: {context}/Dockerfile
+            file: Dockerfile
             platforms: linux/386,linux/amd64,linux/arm/v5,linux/arm/v7,linux/arm64/v8,linux/mips64le,linux/ppc64le,linux/s390x
             push: true
             build-args: |
