--- a/.github/workflows/mainline-alpine.yml
+++ b/.github/workflows/mainline-alpine.yml
@@ -45,7 +45,7 @@ jobs:
             push: true
             build-args: |
                 NGINX_FROM_IMAGE=nginx:1.25.2-alpine
-                ENABLED_MODULES=brotli headers-more modsecurity geoip2 subs-filter
+                ENABLED_MODULES=brotli
             tags: |
                 snowdreamtech/nginx:1.25.2-alpine
                 snowdreamtech/nginx:mainline-alpine
