--- a/.github/workflows/mainline-alpine.yml
+++ b/.github/workflows/mainline-alpine.yml
@@ -41,7 +41,7 @@ jobs:
           with:
             context: .
             file: Dockerfile.alpine
-            platforms: linux/s390x
+            platforms: linux/ppc64le
             push: true
             build-args: |
                 NGINX_FROM_IMAGE=nginx:1.25.2-alpine
