--- a/.github/workflows/mainline-alpine-slim.yml
+++ b/.github/workflows/mainline-alpine-slim.yml
@@ -41,7 +41,7 @@ jobs:
           with:
             context: .
             file: Dockerfile.alpine
-            platforms: linux/386,linux/amd64,linux/arm/v6,linux/arm/v7,linux/arm64/v8,linux/ppc64le,linux/s390x
+            platforms: linux/386,linux/amd64,linux/arm/v7,linux/arm64/v8,linux/ppc64le,linux/s390x
             push: true
             build-args: |
                 NGINX_FROM_IMAGE=nginx:1.25.2-alpine-slim
