--- a/Dockerfile.alpine
+++ b/Dockerfile.alpine
@@ -14,7 +14,7 @@ COPY ./ /modules/
 RUN set -ex \
     && apk update \
     && apk add linux-headers openssl-dev pcre2-dev zlib-dev openssl abuild \
-               musl-dev libxslt libxml2-utils make mercurial gcc unzip socat git \
+               musl-dev libxslt libxml2-utils make mercurial gcc unzip git \
                xz g++ coreutils \
     && git clone --depth 1 https://github.com/acmesh-official/acme.sh.git \
     # allow abuild as a root user \
@@ -67,13 +67,14 @@ COPY --from=builder /tmp/packages /tmp/packages
 COPY --from=builder /acme.sh /acme.sh
 RUN set -ex \
     && apk update \
-    && apk add cron \
+    && apk add socat cron \
     && . /tmp/packages/modules.env \
     && for module in $BUILT_MODULES; do \
            apk add --allow-untrusted /tmp/packages/nginx-module-${module}-${NGINX_VERSION}*.apk; \
        done \
-    && /acme.sh/acme.sh --install -m my@example.com \
+    && cd /acme.sh \
+    && ./acme.sh --install -m my@example.com \
     && rm -rf /tmp/packages \
     && rm -rf /acme.sh \
-    && rm -rf /var/cache/apk/
+    && rm -rf /var/cache/apk/*
 
