update: && echo '. "/root/.acme.sh/acme.sh.env"' > /etc/profile.d/acme.sh \

--- a/Dockerfile.alpine
+++ b/Dockerfile.alpine
@@ -74,6 +74,7 @@ RUN set -ex \
        done \
     && cd /acme.sh \
     && ./acme.sh --install -m my@example.com \
+    && echo -e '#!/bin/sh\n\n. "/root/.acme.sh/acme.sh.env"' > /etc/profile.d/acme.sh \
     && echo -e '#!/bin/sh\n\n. "/root/.acme.sh/acme.sh.env"' > /docker-entrypoint.d/50-alias-acme.sh \
     && chmod 775 /docker-entrypoint.d/50-alias-acme.sh \
     && rm -rf /tmp/packages \
